--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -359,8 +359,17 @@ html {
     margin-left: 11px
 }
 
-.layui-header .layui-nav .layui-this:after, .layui-layout-admin .layui-header .layui-nav-bar {
-    top: 0 !important;
+/*.layui-header .layui-nav .layui-this:after,*/
+/*.layui-header .layui-nav .layui-this:after,.layui-layout-admin .layui-header .layui-nav-bar {*/
+    /*top: 0 !important;*/
+    /*bottom: auto;*/
+    /*height: 3px;*/
+    /*background-color: #fff;*/
+    /*background-color: rgba(255, 255, 255, .3)*/
+/*}*/
+
+.layui-layout-admin .layui-header .layui-nav-bar {
+    /*top: 0 !important;*/
     bottom: auto;
     height: 3px;
     background-color: #fff;
