--- a/application/admin/view/user/user/index.html
+++ b/application/admin/view/user/user/index.html
@@ -5,7 +5,104 @@
 <div class="body-form selectMemberToSendSms auto-height-table" style="display: none">
     <div class="layui-form">
         <div class="layui-row">
-            <table class="layui-hide" id="table_black" lay-filter="table_black" table-reload-id="tableReload"></table>
+            <form action="">
+                 <table class="layui-table table-border dashed-td" lay-skin="line" lay-size="sm" style="margin-bottom: 15px">
+                <colgroup>
+                    <col class="yty_tdright" width="110px">
+                    <col class="yty_tdright">
+                </colgroup>
+                <tbody  class="step-third">
+                <tr>
+                    <td class="yty_tdleft"> 赠送礼品 :</td>
+                    <td class="yty_tdright">
+                        <input type="checkbox" name="gift_switch" lay-skin="primary"  title="" checked="">
+                        <div class="layui-inline yty-form">
+                            <span>赠送流量</span>
+                            <a href="javascript:void(0);" class="astyle">选择流量卡 </a>
+                            <a href="javascript:void(0);" class="astyle">流量充值 </a>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td  class="yty_tdright border-bottom" colspan="2">
+                        <div class="layui-row">
+                            <div class="layui-col-md8">
+                                <table class="layui-table table-border dashed-td" lay-skin="line" lay-size="sm">
+                                    <colgroup>
+                                        <col class="yty_tdleft" width="110px">
+                                        <col class="yty_tdright">
+                                    </colgroup>
+                                    <tbody>
+                                    <tr>
+                                        <td class="yty_tdleft"><span class="red_color">*</span> 短信签名 :</td>
+                                        <td colspan="2" class="yty_tdright">
+                                            【<input type="text" name="sms_name" id="sms_name" value="阿里狗" placeholder="" autocomplete="off" class="layui-input">】
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="yty_tdleft"><span class="red_color">*</span> 短信标签 :</td>
+                                        <td class="yty_tdright sms_label">
+                                            <ul class="ulstyle0">
+                                                <li><a href="javascript:void(0);" id="buyer">收货人</a></li>
+                                                <li><a href="javascript:void(0);" id="order_id">订单编号</a></li>
+                                                <li><a href="javascript:void(0);" id="seller_nick_name">买家昵称</a></li>
+                                                <li><a href="javascript:void(0);" id="product_name">商品简称</a></li>
+                                                <li><a href="javascript:void(0);">商品名称</a></li>
+                                            </ul>
+
+                                            <ul class="ulstyle1">
+                                                <li><a href="javascript:void(0);" id="short_href">#短链#</a></li>
+                                                <li><a href="javascript:void(0);" id="sms_module">#短信模板#</a></li>
+                                            </ul>
+                                            <!--<br>-->
+                                            <!--<p class="marginbuttom5"></p>-->
+                                            <textarea placeholder="请输入内容" class="layui-textarea yty-textarea sms-content" id="sms-content">注意防骗：如骗子电话短.信骚扰说订单不能发货索取账号信息及银行.卡信息，千万不能相信，有任何问题上线联系客服哦，谨防诈骗！</textarea>
+                                            <p class="font12">已输入：<span class="red_color sms-content-length">62</span> 字(包含签名) 当前计费：<span class="red_color">1</span>条 <span class="astyle tips-icon font14" title-icon="1、单条70个字,超出70个字将按照67个字每条计算<br>
+2、一个汉字,数字,字母,空格都算一个字<br>
+3、带标签的短信按实际发出的长度计算！因部分标签替换后长短不一（如买家昵称,商品名称,商品简称等），请以实际替换后长度为准，已输入字数提示仅供参考！">计费规则(重要)</span></p>
+                                            <!--<p class="font12">1、单条70个字,超出70个字将按照67个字每条计算<br></p>
+                                            <p class="font12">2、一个汉字,数字,字母,空格都算一个字<br></p>
+                                            <p class="font12">3、带标签的短信按实际发出的长度计算！因部分标签替换后长短不一（如买家昵称,商品名称,商品简称等），请以实际替换后长度为准，已输入字数提示仅供参考！</p>-->
+                                            <p class="font12">提示：<span class="red_color">标签和链接前后需有空格分隔，请勿删除前后空格！</span></p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="yty_tdleft">短信测试 :</td>
+                                        <td class="yty_tdright">
+                                            <input type="text" style="font-size: 12px;width: 300px;" name="test_phone" placeholder="请输入短信测试手机号，多个手机号用逗号(,)隔开" id="test_phone" value="" placeholder="" autocomplete="off" class="layui-input">
+                                            <button type="button" name="" id="" autocomplete="off" class="layui-btn layui-btn-sm  layui-btn-primary">短信测试</button>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="layui-col-md4">
+                                <div class="sms-phone">
+                                    <div class="phone-container">
+                                        <div class="smg-content">
+                                            【阿里狗】<span class="synchronize_sms_content">注意防骗：如骗子电话短.信骚扰说订单不能发货索取账号信息及银行.卡信息，千万不能相信，有任何问题上线联系客服哦，谨防诈骗！</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td colspan="2" class="yty_tdright border-bottom">
+                        <div class="layui-form-item footer-form">
+                            <div class="footer footer-common">
+                                <button type="button" lay-submit="" lay-filter="" class="layui-btn yty-btn pre-step-thrid layui-btn-normal layui-btn-sm">上一步</button>
+                                <button type="submit" lay-submit="" lay-filter="" class="layui-btn layui-btn-normal layui-btn-sm  layui-btn-sm">提交</button>
+                                <button type="button" class="layui-btn layui-btn-sm layui-btn-normal cancle yty-btn">取消</button>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            </form>
         </div>
     </div>
 </div>
